# cp-autotests

./: .gitignore  README.md  concept.md  conftest.py  justfile  openapi.yaml  pyproject.toml
.circleci/: config.yml
clients/: api_client.py  eth_client.py
config/: settings.py
control_panel/: node.py
fixtures/: api_fixtures.py  eth_fixtures.py  k8s_fixtures.py  playwright_fixtures.py
tests/api/: README.md  test_auth_audit_log.py  test_auth_authorization.py  test_auth_login.py  test_auth_logout.py  test_auth_password.py  test_auth_profile.py  test_auth_refresh.py  test_auth_username.py  test_nodes_concurrency.py  test_nodes_create.py  test_nodes_delete.py  test_nodes_get.py  test_nodes_list.py  test_nodes_security.py  test_nodes_state.py
tests/api/cases/: const.py  test_cases.py
tests/api/schemas/: __init__.py  auth_schemas.py  node_schemas.py
tests/ui/: test_login.py  test_node_deployment_e2e.py  test_settings_e2e.py
tests/ui/constants/: ui_constants.py  ui_errors.py
tests/ui/locators/: __init__.py  base_locators.py  dashboard_page_locators.py  login_page_locators.py  monitoring_locators.py  node_deployment_locators.py  nodes_locators.py  settings_locators.py
tests/ui/pages/: __init__.py  base_page.py  dashboard_page.py  login_page.py  monitoring_page.py  node_deployment_page.py  nodes_page.py  settings_page.py
utils/: api_client.py  http_logger.py  k8s_helper.py  token_generator.py  wait_helper.py
